--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "whatwg-fetch": "^3.2.0"
   },
   "dependencies": {
-    "idb": "^6.1.2",
-    "regenerator-runtime": "^0.13.5"
+    "idb": "^6.0.0",
+    "regenerator-runtime": "^0.13.7",
+    "serviceworker-webpack-plugin": "^1.0.1"
   }
 }
