--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "codeceptjs": "^3.0.7",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
@@ -33,6 +34,7 @@
     "karma-jasmine": "^3.3.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^4.0.2",
+    "mini-css-extract-plugin": "^1.6.2",
     "puppeteer": "^5.3.1",
     "sharp": "^0.26.1",
     "style-loader": "^1.2.1",
