--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "codeceptjs": "^3.0.7",
+    "compression-webpack-plugin": "^6.0.2",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
-    "css-minimizer-webpack-plugin": "^3.0.2",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
@@ -35,6 +36,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^4.0.2",
     "mini-css-extract-plugin": "^1.6.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "puppeteer": "^5.3.1",
     "sharp": "^0.26.1",
     "style-loader": "^1.2.1",
