--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.0.9",
-    "whatwg-fetch": "^3.2.0"
+    "whatwg-fetch": "^3.2.0",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
     "idb": "^6.0.0",
     "lazysizes": "^5.3.2",
-    "regenerator-runtime": "^0.13.7",
-    "serviceworker-webpack-plugin": "^1.0.1"
+    "regenerator-runtime": "^0.13.7"
   }
 }
